<resources>
    <string name="app_name">Ascend</string>
    <string name="details_link">Problem Understanding? <u>Click here</u></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_upstream">Get upstream</string>
    <string name="text_send_file">Send file</string>
    <string name="text_ready">Ready</string>
    <string name="status_text">Status :</string>
    <string name="response_text">Response :</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_item_option1">Option 1</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_option2">Option 2</string>
    <string name="drawer_item_option3">Option 3</string>
    <string name="website_link"><u>Website Link</u></string>
    <string name="app_name_title"><b>Welcome</b></string>
    <string name="static_record_title">Record to Analyze</string>
    <string name="realtime_record_title"><b>Analyze while recording</b></string>
    <string name="realtime_we_hear_title"><b>We hear you\nKeep talking.</b></string>
    <string name="realtime_first_analysis">First analysis will take 20-30 seconds</string>
    <string name="name"><b>Kartik Bhutani</b></string>
    <string name="email_id"><b>kartik.alive07@gmail.com</b></string>

    <string name="server_client_id">595978785726-iobakn4rsj8bflfd2a8ugrqdeu1evlih.apps.googleusercontent.com</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="facebook_app_id">109031543130790</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="default_web_client_id">464236828290-7o7njndn85gt67gmokmj01pqaebv0l1s.apps.googleusercontent.com</string>-->

    <string name="about_us_content">We are a <b>Delhi Technological University</b> based team of ambitious students with a keen drive to
        innovate and help the community.\n\n
        We are in collaboration with <b>Tamana - School of hope.</b>, one of the most premier NGOs of India who have been working for the cause of Autism
        since 3 decades. Their excellent mentorship and constant support always drived and motivated us in achieving the ultimate goal of not just
        doing a project but also being an aid to the society. Our divine presence <b>Padma Bhushan Dr.Shayama Chauna</b> and our guiding light
        <b>Dr. Krishnaveni Achary</b> helped us achieve some great results.\n\n

        Although we\'ve always been aware of Autism,  the knowledge of Alexithymia - a specific personality construct of the Autism Spectrum Disorder,
        came to us just a few years ago. Fascinated by the idea of recognizing emotions through speech we wondered if we could use this
        technology to help people communicate.\n\n
        And that is where it all began. \n\n
        We decided to use a new approach, a new method. The method of technology. With ASCEND we can not only help alexithymic people communicate
        better, we can also help them understand emotions and help them in reacting to situations they earlier found difficult to express
        themselves in.\n\n
        <b>Kartik Bhutani</b>\nJava Slayer, Number Player and a Seasoned Voyager in the sea of difficulties.\n\n
        <b>Suvigya Nijhawan</b>\nCodeigniter, Visual Interpreter and a Staunch Crusader in the battle of peculiarities.\n\n
        <b>Sonam Tshering</b>\nPython Enthusiast, Team Worker and Conflict Resolver in the inevitable path to success.\n\n
        <b>Viha Gupta</b>\nGraphics Artist, UI-Designer and Resolute Motivator in the spiraling vortex of obstacles.\n\n

    </string>

    <string name="subscription_key">c467e48cfe3e418da2643039f68c4dcd</string>
    <string name="endpoint">https://westcentralus.api.cognitive.microsoft.com/face/v1.0</string>
    <string name="progress_dialog_title">Please wait</string>
</resources>
