<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="teamawaazdtu.com.awaaz.MainActivity"
    android:background="@drawable/background">

    <TextView
        android:text="Emotion\nDetected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_record_title"
        android:id="@+id/tv_title1"
        android:textColor="@android:color/background_dark"
        android:alpha="0"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="50dp" />

    <TextView
        android:text="Expected\nReaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_title1"
        android:id="@+id/tv_title2"
        android:textColor="@android:color/background_dark"
        android:alpha="0"
        android:textSize="20sp"
        android:layout_toRightOf="@+id/tv_title1"
        android:layout_marginLeft="40dp" />

    <ImageView
        app:srcCompat="@drawable/case1emotion"
        android:id="@+id/iv_emotion"
        android:layout_centerVertical="false"
        android:layout_below="@+id/tv_title1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:layout_width="110dp"
        android:layout_height="110dp" />

    <ImageView
        app:srcCompat="@drawable/case1reaction"
        android:id="@+id/iv_reaction"
        android:layout_below="@+id/tv_title2"
        android:layout_centerHorizontal="false"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:alpha="0" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_speak_again"
        android:background="@drawable/ic_mic"
        android:padding="10dp"
        android:onClick="onClick"
        android:alpha="1"
        android:layout_marginBottom="30dp"
        android:visibility="gone" />

    <TextView
        android:text="Emotion Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_emotion"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:alpha="0"
        android:layout_below="@+id/iv_emotion"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/tv_reaction"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="Reaction Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_reaction"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:alpha="0"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/iv_reaction"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_emotion"
        android:layout_marginTop="20dp"
        android:id="@+id/tv_details"
        android:layout_centerHorizontal="true"
        android:textColor="#0000FF"
        android:text="@string/details_link"
        android:textSize="16sp"
        android:alpha="0"
        android:onClick="onClickDetailsLink" />

    <Button
        android:text="Analyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_send"
        android:onClick="onClick"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />


    <!---->

    <TextView
        android:id="@+id/tv_status_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ready"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_response_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/tv_wait"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <!---->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_details"
        android:fillViewport="false"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAlignment="center"
            android:alpha="0" />
    </ScrollView>

    <!--android:layout_above="@+id/send_file_button"-->

        <!--android:layout_alignRight="@+id/send_file_button"-->
        <!--android:layout_alignEnd="@+id/send_file_button"-->


    <ImageButton
        android:text="STOP"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/btn_stop"
        android:onClick="onClick"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_alignBottom="@+id/btn_speak"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_stop"
        android:alpha="1" />

    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/btn_listen"
        android:onClick="onClick"
        android:src="@drawable/ic_listen"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:layout_alignTop="@+id/btn_speak"
        android:layout_centerVertical="true"
        android:alpha="1" />

    <Button
        android:text="Analyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_analyze"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn_speak"
        android:visibility="gone" />

    <TextView
        android:text="@string/static_record_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_record_title"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:layout_below="@+id/btn_speak_again"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/btn_speak"
        android:onClick="onClick"
        android:alpha="1"
        android:src="@drawable/ic_mic2"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@+id/tv_response_title"
        android:layout_alignEnd="@+id/tv_response_title"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
